  migration support parameters. Support for ipb_* field aliases in
  DatabaseBlockStore::newFromRow(), which was meant to support the use of
  $schema, has been removed.
* Block::TYPE_ID has been removed. Use DatabaseBlockStore::newFromID().
* UserOptionsManager methods resetOptions, listOptionKinds and getOptionKinds,
  deprecated since 1.43, have been removed.
* When fetching a message containing {{PAGENAME}} or similar with
  wfMessage(...)->text(), the title used will be Special:Badtitle unless a
  context title was set with e.g. Message::setContext(). In the past, the title
  used in a previous call was sometimes used.
* …

=== Deprecations in 1.44 ===

* Various static methods on ChangeTags, deprecated since 1.41, each now emit
  deprecation warnings. Use service access to the ChangeTagsStore instead:
  addTags(), defineTag(), deleteTagEverywhere(), getDisplayTableName(),
  getSoftwareTags(), getTags(), getTagsWithData(), listDefinedTags(),
  listExplicitlyDefinedTags(), listSoftwareActivatedTags(),
  listSoftwareDefinedTags(), makeTagSummarySubquery(), modifyDisplayQuery(),
  purgeTagCacheAll(), tagUsageStatistics(), and updateTags().
* WikiPage::doEditUpdates(), deprecated since 1.32, is now emitting warnings.
  Use DerivedPageDataUpdater::doUpdates() instead.
* IDatabase::setTransactionListener() is now deprecated without replacement.
* ILBFactory::setWaitForReplicationListener() is now deprecated without
  replacement.
* Maintenance::beginTransaction(), Maintenance::commitTransaction(),
  Maintenance::rollbackTransaction(), and Maintenance::waitForReplication()
  are now deprecated. Use Maintenance::*TransactionRound() instead.
* The ReverseArrayIterator class, unused since 1.32, has been deprecated.
* LinksUpdate::getImages() has been deprecated, like ParserOutput::getImages().
  Instead, use ParserOutput::getLinkList( ParserOutputLinkTypes::MEDIA ).
* ResourceLoader::makeConfigSetScript() is now deprecated. Consider using